[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menus/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/option_theme.tres" type="Theme" id=3]

[node name="OptionsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 3 )
popup_exclusive = true
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -610.5
margin_top = -434.5
margin_right = 610.5
margin_bottom = 434.5
tab_align = 0
all_tabs_in_front = true

[node name="Video" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 66.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Video"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.0
margin_top = -277.5
margin_right = 499.0
margin_bottom = 277.5

[node name="Label" type="Label" parent="TabContainer/Video/VBoxContainer"]
margin_right = 998.0
margin_bottom = 56.0
text = "Video Settings"
align = 1

[node name="Fullscreen" type="CheckButton" parent="TabContainer/Video/VBoxContainer"]
margin_top = 60.0
margin_right = 998.0
margin_bottom = 116.0
text = "Fullscreen"

[node name="Vsync" type="CheckButton" parent="TabContainer/Video/VBoxContainer"]
margin_top = 120.0
margin_right = 998.0
margin_bottom = 176.0
text = "V-Sync"

[node name="Audio" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 66.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.0
margin_top = -277.5
margin_right = 499.0
margin_bottom = 277.5
rect_pivot_offset = Vector2( -795, -97.5 )

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer"]
margin_right = 998.0
margin_bottom = 56.0
text = "Audio Settings"
align = 1

[node name="LabelMaster" type="Label" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 60.0
margin_right = 998.0
margin_bottom = 116.0
text = "Master Volume"

[node name="Master" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
margin_left = 100.0
margin_top = 120.0
margin_right = 1000.0
margin_bottom = 136.0
min_value = 1.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/Master"]
margin_left = -100.0
margin_top = -50.0
margin_bottom = 50.0
align = 1
valign = 1

[node name="LabelMusic" type="Label" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 140.0
margin_right = 998.0
margin_bottom = 196.0
text = "Music Volume"

[node name="Music" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
margin_left = 100.0
margin_top = 200.0
margin_right = 1000.0
margin_bottom = 216.0
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/Music"]
margin_left = -100.0
margin_top = -50.0
margin_bottom = 50.0
align = 1
valign = 1

[node name="LabelSFX" type="Label" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 220.0
margin_right = 998.0
margin_bottom = 276.0
text = "Sound Effect Volume"

[node name="SFX" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
margin_left = 100.0
margin_top = 280.0
margin_right = 1000.0
margin_bottom = 296.0
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/SFX"]
margin_left = -100.0
margin_top = -50.0
margin_bottom = 50.0
align = 1
valign = 1

[node name="LabelVoice" type="Label" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 300.0
margin_right = 998.0
margin_bottom = 356.0
text = "In-Game Voices Volume"

[node name="Voice" type="HSlider" parent="TabContainer/Audio/VBoxContainer"]
margin_left = 100.0
margin_top = 360.0
margin_right = 1000.0
margin_bottom = 376.0
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/Voice"]
margin_left = -100.0
margin_top = -50.0
margin_bottom = 50.0
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
margin_top = 380.0
margin_right = 998.0
margin_bottom = 380.0

[node name="Gameplay" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Gameplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.0
margin_top = -277.5
margin_right = 499.0
margin_bottom = 277.5

[node name="Label" type="Label" parent="TabContainer/Gameplay/VBoxContainer"]
margin_right = 998.0
margin_bottom = 56.0
text = "Gameplay Settings"
align = 1

[node name="FilterSpoilers" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/FilterSpoilers"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.0
margin_top = -277.5
margin_right = 499.0
margin_bottom = 277.5

[node name="Label" type="Label" parent="TabContainer/FilterSpoilers/VBoxContainer"]
margin_right = 998.0
margin_bottom = 56.0
text = "Spoiler Filtering Options"
align = 1

[node name="LabelNaruto" type="Label" parent="TabContainer/FilterSpoilers/VBoxContainer"]
margin_right = 40.0
margin_bottom = 56.0
text = "Naruto (Part 1, Shippuden 100-500, Boruto)"

[node name="Naruto" type="HSlider" parent="TabContainer/FilterSpoilers/VBoxContainer"]
margin_left = -107.5
margin_top = -139.0
margin_right = -91.5
margin_bottom = -123.0
max_value = 7.0
value = 1.0
tick_count = 8

[node name="LabelAvatar" type="Label" parent="TabContainer/FilterSpoilers/VBoxContainer"]
margin_right = 40.0
margin_bottom = 56.0
text = "Avatar (Books 1-3, Korra)"

[node name="Avatar" type="HSlider" parent="TabContainer/FilterSpoilers/VBoxContainer"]
margin_left = -107.5
margin_top = -139.0
margin_right = -91.5
margin_bottom = -123.0
max_value = 2.0
value = 1.0
tick_count = 2

[connection signal="toggled" from="TabContainer/Video/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="TabContainer/Video/VBoxContainer/Vsync" to="." method="_on_Vsync_toggled"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/VBoxContainer/Voice" to="." method="_on_Voice_value_changed"]
[connection signal="value_changed" from="TabContainer/FilterSpoilers/VBoxContainer/Naruto" to="." method="_on_Naruto_value_changed"]
[connection signal="value_changed" from="TabContainer/FilterSpoilers/VBoxContainer/Avatar" to="." method="_on_Avatar_value_changed"]
